solve: axis X overflow app

--- a/car-expense-tracker-frontend/src/App.css
+++ b/car-expense-tracker-frontend/src/App.css
@@ -35,7 +35,6 @@
 
 .Content {
   flex: 1;
-  overflow-y: auto;
   padding: 1;
 }
 
